configured for zendesk

--- a/assets/javascripts/discourse/templates/connectors/after-topic-footer-main-buttons/desk-button.hbs
+++ b/assets/javascripts/discourse/templates/connectors/after-topic-footer-main-buttons/desk-button.hbs
@@ -1,6 +1,6 @@
-<button {{action "clickDeskButton"}}
-  class="btn desk {{topic.deskCase.css_class}}"
-  title={{topic.deskCase.title}}>
+<button {{action "clickZendeskButton"}}
+  class="btn desk {{topic.zendeskTicket.css_class}}"
+  title={{topic.zendeskTicket.title}}>
   {{fa-icon "ticket"}}
-  {{topic.deskCase.text}}
+  {{topic.zendeskTicket.text}}
 </button>
