IN-864: zendesk MVP

--- a/assets/javascripts/discourse/templates/connectors/after-topic-footer-main-buttons/desk-button.hbs
+++ b/assets/javascripts/discourse/templates/connectors/after-topic-footer-main-buttons/desk-button.hbs
@@ -1,6 +1,8 @@
-<button {{action "clickZendeskButton"}}
+<!--button {{action "clickZendeskButton"}}
   class="btn desk {{topic.zendeskTicket.css_class}}"
   title={{topic.zendeskTicket.title}}>
   {{fa-icon "ticket"}}
   {{topic.zendeskTicket.text}}
-</button>
+</button-->
+
+{{! zendesk-button}}
