open links in new tab

--- a/assets/javascripts/discourse/templates/admin/plugins-zendesk.hbs
+++ b/assets/javascripts/discourse/templates/admin/plugins-zendesk.hbs
@@ -17,11 +17,11 @@
               <td>{{ticket.id}}</td>
               <td>{{ticket.forum_topic_id}}</td>
               <td>
-                  <a href='{{ticket.forum_link}}'>{{ticket.subject}}</a>
+                  <a href='{{ticket.forum_link}}' target="_blank">{{ticket.subject}}</a>
               </td>
               <td>{{ticket.status}}</td>
               <td>
-                  <a href='{{ticket.base_url}}/agent/tickets/{{ticket.id}}'>{{ticket.url}}</a>
+                  <a href='{{ticket.base_url}}/agent/tickets/{{ticket.id}}' target="_blank">{{ticket.url}}</a>
               </td>
 
               <!--td>
