--- a/assets/javascripts/discourse/templates/connectors/after-topic-footer-main-buttons/zendesk-button.hbs
+++ b/assets/javascripts/discourse/templates/connectors/after-topic-footer-main-buttons/zendesk-button.hbs
@@ -1,6 +1,6 @@
-<button {{action "clickZendeskButton"}}
+<!--button {{action "clickZendeskButton"}}
         class="btn zendesk {{topic.zendeskTicket.css_class}}"
         title={{topic.zendeskTicket.title}}>
   {{fa-icon "ticket"}}
   {{topic.zendeskTicket.text}}
-</button>
+</button-->
